# Someip

./: Readme  Readme.md
vsomeip/Training_examples-e/1-service/: CMakeLists.txt  service-example.cpp
vsomeip/Training_examples-e/2-offer-service/: CMakeLists.txt  service-offer.cpp
vsomeip/Training_examples-e/3-cli-example/: CMakeLists.txt  cli.cpp
vsomeip/Training_examples-e/4-ReqResP/: CMakeLists.txt  cli.cpp  service.cpp
vsomeip/Training_examples-e/5-SUBNOTFY/: CMakeLists.txt  cli.cpp  ser.cpp
vsomeip/Training_examples-e/Dashboard/VehicleSimulator/: VehicleSimulator.pro  VehicleSimulator.pro.user.18  VehicleSimulator.pro.user.3.2-pre1  VehicleSimulator.pro.user.fa97623  communication.cpp  communication.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  v.json
vsomeip/Training_examples-e/Dashboard/dashboard/: cluster.cpp  cluster.h  communication.cpp  communication.h  dashboard.pro  dashboard.pro.user.18  dashboard.pro.user.3.2-pre1  dashboard.pro.user.435e62e  main.cpp  mymain.h  v.json  vs.json
vsomeip/Training_examples-e/Dashboard/dashboard/qml/: DashboardGaugeStyle.qml  IconGaugeStyle.qml  TachometerStyle.qml  TurnIndicator.qml  ValueSource.qml  dashboard.qml
